--- a/client/index.html
+++ b/client/index.html
@@ -25,9 +25,9 @@
     </div>
 </div>
 
-<script src="quiz.js"></script>
-<script src="question.js"></script>
-<script src="quiz-ui.js"></script>
-<script src="app.js"></script>
+<script src="./js/quiz.js"></script>
+<script src="./js/question.js"></script>
+<script src="./js/quiz-ui.js"></script>
+<script src="./js/app.js"></script>
 </body>
 </html>
